Fixed alignment of navbar elements

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -25,8 +25,8 @@ Black
     color: #FD4D0C;
 }
 
-#leaderboard-link{
-    margin-left: 15px;
+#login{
+    margin-right: 15px;
 }
 
 
